--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "mongoose": "^6.1.8",
+    "stripe": "^8.67.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
