--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,11 @@
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^16.3.0",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^6.1.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "mongoose": "^6.1.8",
+    "react-scripts": "^5.0.1",
     "stripe": "^8.67.0",
     "web-vitals": "^0.2.4"
   },
