--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "mongoose": "^6.1.8",
     "stripe": "^8.67.0",
