--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,19 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^16.3.0",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^6.1.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^6.2.2",
     "react-icons": "^4.3.1",
-    "mongoose": "^6.1.8",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
     "stripe": "^8.67.0",
     "web-vitals": "^0.2.4"
