--- a/package.json
+++ b/package.json
@@ -22,16 +22,5 @@
   "devDependencies": {
     "concurrently": "^6.4.0"
   },
-  "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/roboto": "^4.5.7",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.8.3",
-    "bootstrap": "^5.1.3",
-    "colors": "^1.4.0",
-    "cors": "^2.8.5",
-    "express-graphql": "^0.12.0",
-    "react-bootstrap": "^2.4.0"
-  }
+  "dependencies": {}
 }
