--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
   "devDependencies": {
     "concurrently": "^6.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bulma": "^0.9.4"
+  }
 }
