--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "concurrently": "^6.4.0"
   },
   "dependencies": {
-    "bulma": "^0.9.4"
+    "bulma": "^0.9.4",
+    "serve": "^13.0.2"
   }
 }
