--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bulma": "^0.9.4",
     "graphql": "^16.3.0",
+    "image-webpack-loader": "^8.1.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.1.8",
     "react": "^17.0.1",
