--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,12 @@ node_modules
 # testing
 /coverage
 
-# production
-/build
+# # production
+# /build
+src/*
+public/*
+build/static/css/*.map
+build/static/js/*.map
 
 # misc
 .DS_Store
