--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "server": "cd server && npm run watch",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "seed": "cd server && npm run seed",
-    "heroku-postbuild": "echo Skip build on Heroku"
+    "seed": "cd server && npm run seed"
   },
   "keywords": [],
   "author": "",
