--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "bulma": "^0.9.4",
     "heroku": "^7.60.2",
     "react-icons": "^4.4.0",
