--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,11 @@ node_modules
 
 # # production
 # /build
-src/*
-public/*
-build/static/css/*.map
-build/static/js/*.map
-build/static/mdedia/*.map
+# src/*
+# public/*
+# build/static/css/*.map
+# build/static/js/*.map
+# build/static/mdedia/*.map
 
 # misc
 .DS_Store
