--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,11 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@apollo/react-hooks": "^4.0.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@stripe/stripe-js": "^1.31.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,7 +15,7 @@
     "graphql": "^16.3.0",
     "image-webpack-loader": "^8.1.0",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^6.1.8",
+    "mongoose-validation-error-message-handler": "^1.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
