--- a/package.json
+++ b/package.json
@@ -23,13 +23,6 @@
     "concurrently": "^6.4.0"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "@reduxjs/toolkit": "^1.8.2",
-    "bulma": "^0.9.4",
-    "heroku": "^7.60.2",
-    "react-icons": "^4.4.0",
-    "react-simple-file-upload": "^1.0.1",
-    "serve": "^13.0.2"
-  },
-  "heroku-run-build-script": true
+    "react": "^18.2.0"
+  }
 }
