--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.6.3",
+    "apollo-server-express": "^3.6.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4",
+    "mongoose": "^6.1.10",
+    "react-simple-file-upload": "^1.0.1",
+    "serve": "^13.0.2",
     "stripe": "^8.67.0"
   },
   "devDependencies": {
